begin adjusting unit tests and fixing code